--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,7 @@
         }
     ],
     "require": {
-        "php": "~7.0",
-        "kdaviesnz/seokeywords": "0.0.1"
+        "php": "~7.0"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=5.4.3",
@@ -29,23 +28,5 @@
         "psr-4": {
             "kdaviesnz\\seostructuredmarkup\\": "src"
         }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "kdaviesnz\\seostructuredmarkup\\": "tests"
-        }
-    },
-    "scripts": {
-        "test": "phpunit",
-        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
-        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true
     }
 }
